# mini-bitcoin

./: Cargo.toml  README.md
src/: main.rs
src/elliptic_curve/: curve.rs  mod.rs  point.rs  private_key.rs  secp256k1.rs  signature.rs
src/finite_fields/: element.rs  macros.rs  mod.rs  modulo.rs  pow.rs  u256.rs
src/helpers/: bytes.rs  hash.rs
