[package]
name = "bitcoin-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
hmac = "0.12.1"
num-bigint = { version = "0.4" }
primitive-types = "0.12.1"
sha2 = "0.10.6"
sha256 = "1.1.2"

[profile.release]
debug = true
